backend/verify_output_3.txt
C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/models/User.ts(18,8): error TS2307: Cannot find module 'sequelize-typescript' or its corresponding type declarations.
src/models/User.ts(19,31): error TS2307: Cannot find module 'bcryptjs' or its corresponding type declarations.
src/models/User.ts(129,35): error TS2339: Property 'getDataValue' does not exist on type 'User'.

    at createTSError (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\ronaldo\AppData\Local\npm-cache\_npx\1bf7c3c15bf47d04\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19) {
  diagnosticCodes: [ 2307, 2307, 2339 ]
}
